# qt-network-request

./: .gitattributes  .gitignore  .linguist  CMakeLists.txt  Changelog  GenerateVsSln.bat  LICENSE  QtNetworkRequest.pro  README.md
.claude/: settings.local.json
include/: networkreply.h  networkrequestdefs.h  networkrequestevent.h  networkrequestglobal.h  networkrequestmanager.h
include/others/: noncopyable.h
samples/: samples.pro  samples.sln
samples/NetworkDownloader/: CMakeLists.txt  NetworkDownloader.pro  NetworkDownloaderMainWindow.ui  downloadermainwindow.cpp  downloadermainwindow.h  downloadmanager.cpp  downloadmanager.h  downloadtask.h  downloadtaskmodel.cpp  downloadtaskmodel.h  main.cpp
samples/networkrequesttool/: NetworkRequestTool.qrc  NetworkRequestTool.ui  QtNetworkRequestTool_resource.rc  main.cpp  networkrequesttool.cpp  networkrequesttool.h  networkrequesttool.pro
scripts/: Package.wxs  PackageConfig.wxi  Package_QtDownloader.wxs  README_LINUX_BUILD.md  build.bat  build_and_pack.bat  build_linux.sh  build_win.bat  pack.bat  test_local.sh  一键编译打包.bat
source/: QNetworkRequest.pro  memorymappedfile.cpp  memorymappedfile.h  networkcommonrequest.cpp  networkcommonrequest.h  networkdownloadrequest.cpp  networkdownloadrequest.h  networkmtdownloadrequest.cpp  networkmtdownloadrequest.h  networkreply.cpp  networkrequest.cpp  networkrequest.h  networkrequestevent.h  networkrequestmanager.cpp  networkrequestrunnable.cpp  networkrequestrunnable.h  networkrequestutility.cpp  networkrequestutility.h  networkuploadrequest.cpp  networkuploadrequest.h
test/: CMakeLists.txt  main.cpp  test.pro  test_networkrequest.cpp  test_networkrequest.h
